# codesketches

./: README.md  main.py  pyproject.toml
media/videos/main/2160p60/: RecorderExample.srt
media/videos/main/2160p60/partial_movie_files/RandomSort/: partial_movie_file_list.txt
media/videos/main/2160p60/partial_movie_files/RecorderExample/: partial_movie_file_list.txt
media/videos/main/2160p60/partial_movie_files/SortTenThousandItems/: partial_movie_file_list.txt
media/videos/main/2160p60/partial_movie_files/SparseVsDense/: partial_movie_file_list.txt
media/videos/main/480p15/partial_movie_files/SparseVsDense/: partial_movie_file_list.txt
media/voiceovers/: cache.json
