[tool.poetry]
name = "codesketches"
version = "0.1.0"
description = ""
authors = ["Faris Chebib <faris@theluckybead.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
manim = "^0.18.1"
manim-voiceover = {extras = ["azure", "gtts"], version = "^0.3.6.post0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
